--- a/index.html
+++ b/index.html
@@ -136,89 +136,6 @@
             </div>
 
         </section>
-        <section class="best-services">
-            <div class="p-0 best-service-image">
-                <img src="./assets/images/result.jpg">
-                <div class="best-services-blur"></div>
-            </div>
-            <div class="best-services-body">
-                <div class="d-flex justify-content-center align-items-center flex-column best-services-body-content gap-5">
-                    <div class="best-service-title rajdhani-light">
-                        Nossa
-                        <p>
-                            Compromisso
-                        </p>
-                    </div>
-                    <div class="best-service-body">
-                        <p class="body open-sans-300">
-                            Nosso compromisso é com a integridade, qualidade e respeito em cada interação. Valorizamos a
-                            confiança dos nossos clientes e nos esforçamos para oferecer soluções eficazes para suas
-                            necessidades automotivas. Na Carv Auto Center, sua satisfação é nossa prioridade absoluta.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="our-advantages">
-            <div class="our-advantages-title rajdhani-light">
-                Nossas
-                <p>
-                    vantagens
-                </p>
-            </div>
-            <div class="our-advantages-body">
-                <div class="content row">
-                    <div class="col-sm-12 col-md-6 d-flex gap-2 flex-row align-items-center justify-content-center">
-                        <div class="left-advantages">
-                            <h4 class="h4 align-right mb-2">Todas as marcas de carros</h4>
-                            <p class="body open-sans-300 align-right">
-                                Oferecemos uma variedade de serviços de reparo e manutenção para todas as marcas e
-                                modelos
-                                de automóveis, mesmo para os exóticos e antigos.
-                            </p>
-                        </div>
-                        <!-- <img src="./assets/images/maintenance.png"> -->
-                    </div>
-                    <div class="col-sm-12 col-md-6 d-flex flex-row align-items-center justify-content-center">
-                        <!-- <img src="./assets/images/maintenance.png"> -->
-                        <div class="right-advantages">
-                            <h4 class="h4 mb-2">Variedade de serviços</h4>
-                            <p class="body open-sans-300">
-                                O principal do nosso trabalho é oferecer uma ampla gama de serviços de reparação
-                                automóvel de qualidade e temos feito isso desde o nosso primeiro dia
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="result-guarantee">
-            <div class="result-guarantee-body">
-                <div class="result-guarante-title rajdhani-light">
-                    Resultado 100%
-                    <p>
-                        Guarantido
-                    </p>
-                </div>
-                <div class="result-guarante-body">
-                    <p class="body open-sans-300">
-
-                        Na Carv Auto Center, a reparação de automóveis representa experiência, valor e profissionalismo
-                        desde o primeiro dia. Continuamos comprometidos em garantir que os resultados de nosso trabalho
-                        atendam plenamente às suas expectativas.
-                    </p>
-                </div>
-                <!-- <button class="btn btn-more-result">
-                    SAIBA MAIS
-                </button> -->
-            </div>
-            <div class="p-0">
-                <img src="./assets/images/bestService.jpg">
-                <div class="result-guarantee-blur"></div>
-            </div>
-
-        </section>
-
         <section class="our-service">
             <div class="our-service-img"></div>
             <div class="our-service-img-blur"></div>
@@ -290,6 +207,91 @@
                             Rapidamente restauramos a segurança do seu veículo com nossos serviços de reparação de
                             pneus. Desde pequenos furos até danos significativos, nossa equipe realiza reparos
                             profissionais, priorizando qualidade e durabilidade.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="result-guarantee">
+            <div class="result-guarantee-body">
+                <div class="result-guarante-title rajdhani-light">
+                    Resultado 100%
+                    <p>
+                        Guarantido
+                    </p>
+                </div>
+                <div class="result-guarante-body">
+                    <p class="body open-sans-300">
+
+                        Na Carv Auto Center, a reparação de automóveis representa experiência, valor e profissionalismo
+                        desde o primeiro dia. Continuamos comprometidos em garantir que os resultados de nosso trabalho
+                        atendam plenamente às suas expectativas.
+                    </p>
+                </div>
+                <!-- <button class="btn btn-more-result">
+                    SAIBA MAIS
+                </button> -->
+            </div>
+            <div class="p-0">
+                <img src="./assets/images/bestService.jpg">
+                <div class="result-guarantee-blur"></div>
+            </div>
+
+        </section>
+
+        <section class="our-advantages">
+            <div class="our-advantages-title rajdhani-light">
+                Nossas
+                <p>
+                    vantagens
+                </p>
+            </div>
+            <div class="our-advantages-body">
+                <div class="content row">
+                    <div class="col-sm-12 col-md-6 d-flex gap-2 flex-row align-items-center justify-content-center">
+                        <div class="left-advantages">
+                            <h4 class="h4 align-right mb-2">Todas as marcas de carros</h4>
+                            <p class="body open-sans-300 align-right">
+                                Oferecemos uma variedade de serviços de reparo e manutenção para todas as marcas e
+                                modelos
+                                de automóveis, mesmo para os exóticos e antigos.
+                            </p>
+                        </div>
+                        <!-- <img src="./assets/images/maintenance.png"> -->
+                    </div>
+                    <div class="col-sm-12 col-md-6 d-flex flex-row align-items-center justify-content-center">
+                        <!-- <img src="./assets/images/maintenance.png"> -->
+                        <div class="right-advantages">
+                            <h4 class="h4 mb-2">Variedade de serviços</h4>
+                            <p class="body open-sans-300">
+                                O principal do nosso trabalho é oferecer uma ampla gama de serviços de reparação
+                                automóvel de qualidade e temos feito isso desde o nosso primeiro dia
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="best-services">
+            <div class="p-0 best-service-image">
+                <img src="./assets/images/result.jpg">
+                <div class="best-services-blur"></div>
+            </div>
+            <div class="best-services-body">
+                <div
+                    class="d-flex justify-content-center align-items-center flex-column best-services-body-content gap-5">
+                    <div class="best-service-title rajdhani-light">
+                        Nossa
+                        <p>
+                            Compromisso
+                        </p>
+                    </div>
+                    <div class="best-service-body">
+                        <p class="body open-sans-300">
+                            Nosso compromisso é com a integridade, qualidade e respeito em cada interação. Valorizamos a
+                            confiança dos nossos clientes e nos esforçamos para oferecer soluções eficazes para suas
+                            necessidades automotivas. Na Carv Auto Center, sua satisfação é nossa prioridade absoluta.
                         </p>
                     </div>
                 </div>
@@ -396,7 +398,11 @@
                         </div>
                         <h4 class="h4 mt-2 text-center text-white rajdhani-bold">Diagnóstico e Reparo de Suspensão</h4>
                         <p class="comment open-sans-300">
-                            Oferecemos um serviço especializado de diagnóstico e reparo da suspensão automotiva, garantindo o desempenho ideal do seu veículo. Nossa equipe utiliza técnicas avançadas e equipamentos especializados para identificar e corrigir problemas, incluindo ruídos, desgaste e desalinhamento. Mantenha sua condução suave, confortável e segura com a nossa expertise em suspensão automotiva.
+                            Oferecemos um serviço especializado de diagnóstico e reparo da suspensão automotiva,
+                            garantindo o desempenho ideal do seu veículo. Nossa equipe utiliza técnicas avançadas e
+                            equipamentos especializados para identificar e corrigir problemas, incluindo ruídos,
+                            desgaste e desalinhamento. Mantenha sua condução suave, confortável e segura com a nossa
+                            expertise em suspensão automotiva.
 
 
 
