--- a/index.html
+++ b/index.html
@@ -83,13 +83,19 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active rajdhani-high" aria-current="page" href="#">Home</a>
+                            <a class="nav-link rajdhani-high" aria-current="page" href="#about">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link rajdhani-high" href="#">Features</a>
+                            <a class="nav-link rajdhani-high" href="#services">Serviços</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link rajdhani-high" href="#">Pricing</a>
+                            <a class="nav-link rajdhani-high" href="#mission">Missão</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link rajdhani-high" href="#vision">Visão</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link rajdhani-high" href="#values">Valores</a>
                         </li>
                     </ul>
                 </div>
@@ -115,10 +121,9 @@
                 <img src="assets/images/banner2/banner3.jpeg" alt="aa">
             </div> -->
         </section>
-        <section class="about-us">
+        <section class="about-us" id="about">
             <div class="d-flex flex-column about-move align-items-center gap-4 " style="opacity: 1;">
                 <div class="about-us-title default-font rajdhani-light">
-                    ALGUMAS PALAVRAS
                     <p class="rajdhani-bold">
                         SOBRE NÓS
                     </p>
@@ -136,7 +141,7 @@
             </div>
 
         </section>
-        <section class="our-service">
+        <section class="our-service" id="services">
             <div class="our-service-img"></div>
             <div class="our-service-img-blur"></div>
             <div class="our-service-title rajdhani-light">
@@ -212,20 +217,20 @@
                 </div>
             </div>
         </section>
-        <section class="result-guarantee">
+        <section class="result-guarantee" id="mission">
             <div class="result-guarantee-body">
                 <div class="result-guarante-title rajdhani-light">
-                    Resultado 100%
+                    Nossa
                     <p>
-                        Guarantido
+                        Missão
                     </p>
                 </div>
                 <div class="result-guarante-body">
-                    <p class="body open-sans-300">
-
-                        Na Carv Auto Center, a reparação de automóveis representa experiência, valor e profissionalismo
-                        desde o primeiro dia. Continuamos comprometidos em garantir que os resultados de nosso trabalho
-                        atendam plenamente às suas expectativas.
+                    <p class="body open-sans-300 text-center">
+                        Na Carv Auto Center, nossa missão é proporcionar uma experiência de reparação automotiva que
+                        combine expertise, valor e profissionalismo desde o primeiro contato. Mantemos nosso compromisso
+                        em assegurar que os resultados de nossos serviços atendam plenamente às suas expectativas,
+                        garantindo sua total satisfação.
                     </p>
                 </div>
                 <!-- <button class="btn btn-more-result">
@@ -238,42 +243,45 @@
             </div>
 
         </section>
-
-        <section class="our-advantages">
+        <section class="our-advantages" id="vision">
             <div class="our-advantages-title rajdhani-light">
-                Nossas
+                Nossa
                 <p>
-                    vantagens
+                    Visão
                 </p>
             </div>
             <div class="our-advantages-body">
                 <div class="content row">
-                    <div class="col-sm-12 col-md-6 d-flex gap-2 flex-row align-items-center justify-content-center">
+                    <!-- <div class="col-sm-12 col-md-6 d-flex gap-2 flex-row align-items-center justify-content-center">
                         <div class="left-advantages">
-                            <h4 class="h4 align-right mb-2">Todas as marcas de carros</h4>
-                            <p class="body open-sans-300 align-right">
-                                Oferecemos uma variedade de serviços de reparo e manutenção para todas as marcas e
-                                modelos
-                                de automóveis, mesmo para os exóticos e antigos.
-                            </p>
+               
+                            <h5 class="h5 mb-2"><i class="fa-solid fa-check primary-color"></i>Integridade</h5>
+                            <h5 class="h5 mb-2"><i class="fa-solid fa-check primary-color"></i>Qualidade </h5>
+                            <h5 class="h5 mb-2 "><i class="fa-solid fa-check primary-color"></i>Respeito</h5>
+
                         </div>
-                        <!-- <img src="./assets/images/maintenance.png"> -->
-                    </div>
-                    <div class="col-sm-12 col-md-6 d-flex flex-row align-items-center justify-content-center">
+                    </div> -->
+                    <div class="col-sm-12 col-md-12 d-flex flex-row align-items-center justify-content-center">
                         <!-- <img src="./assets/images/maintenance.png"> -->
                         <div class="right-advantages">
-                            <h4 class="h4 mb-2">Variedade de serviços</h4>
-                            <p class="body open-sans-300">
+                            <p class="body text-center  open-sans-300">
+                                Na Carv Auto Center, nossa visão é ser reconhecidos como líderes na indústria
+                                automotiva, impulsionados pelos valores fundamentais de integridade, qualidade e
+                                respeito. Buscamos constantemente estabelecer padrões elevados de excelência e
+                                confiabilidade em todos os aspectos de nossos serviços. Nosso objetivo é construir
+                                relacionamentos duradouros com nossos clientes, baseados na confiança mútua e na entrega
+                                consistente de soluções automotivas excepcionais.
+                            </p>
+                            <!-- <p class="body open-sans-300">
                                 O principal do nosso trabalho é oferecer uma ampla gama de serviços de reparação
                                 automóvel de qualidade e temos feito isso desde o nosso primeiro dia
-                            </p>
+                            </p> -->
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
-        <section class="best-services">
+        <section class="best-services" id="values">
             <div class="p-0 best-service-image">
                 <img src="./assets/images/result.jpg">
                 <div class="best-services-blur"></div>
@@ -282,16 +290,19 @@
                 <div
                     class="d-flex justify-content-center align-items-center flex-column best-services-body-content gap-5">
                     <div class="best-service-title rajdhani-light">
-                        Nossa
+                        Nossos
                         <p>
-                            Compromisso
+                            Valores
                         </p>
                     </div>
                     <div class="best-service-body">
-                        <p class="body open-sans-300">
-                            Nosso compromisso é com a integridade, qualidade e respeito em cada interação. Valorizamos a
-                            confiança dos nossos clientes e nos esforçamos para oferecer soluções eficazes para suas
-                            necessidades automotivas. Na Carv Auto Center, sua satisfação é nossa prioridade absoluta.
+                        <p class="body open-sans-300 text-center">
+
+                            Na Carv Auto Center, nos pautamos pelos valores da integridade, qualidade e respeito em cada
+                            interação. Valorizamos a confiança depositada por nossos clientes e nos dedicamos a fornecer
+                            soluções automotivas eficazes para suas necessidades. Sua satisfação é nossa prioridade
+                            máxima, refletindo nosso compromisso com a excelência e a dedicação em cada serviço
+                            prestado.
                         </p>
                     </div>
                 </div>
