--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     Av. Manoel Teixeira Sampaio, 289 - Jardim Presidencial, Avaré - SP, 18706-673
                 </p>
             </a>
-            <div class="d-flex align-items-center gap-2">
+            <div class="d-flex align-items-center gap-2 px-3">
                 <a href="tel:+5514998464904" class="icon-link text-decoration-none">
                     <i class="fa-solid fa-phone primary-color"></i>
 
@@ -76,7 +76,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon">
+                    <span class="navbar-toggler-icon  d-flex align-items-center justify-content-center">
                         <i class="fa-solid fa-bars"></i>
                     </span>
                 </button>
@@ -323,23 +323,29 @@
                         aria-label="Slide 2"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                        aria-label="Slide 5"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                        aria-label="Slide 6"></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="d-flex flex-column align-items-center">
                             <div class="p-2 card-img">
-                                <!-- <img 
-                                src="https://media-gru2-2.cdn.whatsapp.net/v/t61.24694-24/409757073_358130286965611_5018120938827817335_n.jpg?ccb=11-4&amp;oh=01_Q5AaIM_8X0BAvUZoZwnUtv3DqwyQY2FiKPc98rFWLfVi2nTf&amp;oe=6640AB0E&amp;_nc_sid=e6ed6c&amp;_nc_cat=105"
-                                    class="d-block w-100" alt="..."> -->
+                                <img src="https://lh3.googleusercontent.com/a/ACg8ocKg7Pk8vwF9vQTRRKBdBKH7ClqclYCb1oU7heNU5Cvve8zn8g=w250-h250-p-rp-mo-br100"
+                                    class="d-block w-100" alt="Fabricio">
                                 <i class="fa-solid fa-comment"></i>
                             </div>
                             <div class="w-50 content mt-4">
                                 <h4 class="h4 text-center rajdhani-bold">
-                                    Guilherme Miranda
+                                    Fabricio Miguel
                                 </h4>
                                 <p class="comment open-sans-300">
-                                    Ótima oficina e ótimos profissionais!! Souberam explicar e consertar o problema do
-                                    meu carro com transparência e excelência, super recomendo.
+                                    Além de ter um serviço de ótima qualidade, tem um preço justo e o atendimento de
+                                    primeira.
+                                    Super recomendo, se pudesse dar 1000 estrelas eu daria.
                                 </p>
                             </div>
                         </div>
@@ -347,35 +353,91 @@
                     <div class="carousel-item">
                         <div class="d-flex flex-column align-items-center">
                             <div class="p-2 card-img">
-                                <!-- <img src="https://media-gru2-2.cdn.whatsapp.net/v/t61.24694-24/409757073_358130286965611_5018120938827817335_n.jpg?ccb=11-4&amp;oh=01_Q5AaIM_8X0BAvUZoZwnUtv3DqwyQY2FiKPc98rFWLfVi2nTf&amp;oe=6640AB0E&amp;_nc_sid=e6ed6c&amp;_nc_cat=105"
+                                <img src="https://lh3.googleusercontent.com/a-/ALV-UjUD9tu9h-AcvEHOAVEftrIudtGD_8Il0aAdIhzYzqTzXbSdRTl7=w250-h250-p-rp-mo-br100"
+                                    class="d-block w-100" alt="Lucas">
+                                <i class="fa-solid fa-comment"></i>
+                            </div>
+                            <div class="w-50 content mt-4">
+                                <h4 class="h4 text-center rajdhani-bold">
+                                    Lucas Monteiro
+                                </h4>
+                                <p class="comment open-sans-300">
+                                    Serviço de qualidade e rapidez, recomendo
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex flex-column align-items-center">
+                            <div class="p-2 card-img">
+                                <img src="https://lh3.googleusercontent.com/a/ACg8ocJ_XxVDsQcuZAD4_fIDCB0i2DC0N_mpvH04byRVx-0G4SvT7Q=w250-h250-p-rp-mo-br100"
+                                    class="d-block w-100" alt="Leticia">
+                                <i class="fa-solid fa-comment"></i>
+                            </div>
+                            <div class="w-50 content mt-4">
+                                <h4 class="h4 text-center rajdhani-bold">
+                                    Leticia Machado
+                                </h4>
+                                <p class="comment open-sans-300">
+                                    Atendimento excelente, não entendo quase nada de carro e eles me explicaram tudo
+                                    muito detalhado do que iria ser consertado no meu carro, agradeço muito a equipe
+                                    pela presteza e paciência com que me trataram.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex flex-column align-items-center">
+                            <div class="p-2 card-img">
+                                <img src="https://lh3.googleusercontent.com/a-/ALV-UjWdtpV7lzzaAEQwQZpX5oRLDBHiR5sIDhiWGlTPS7yT5EOqNhBIAg=w250-h250-p-rp-mo-br100"
+                                    class="d-block w-100" alt="leilane">
+                                <i class="fa-solid fa-comment"></i>
+                            </div>
+                            <div class="w-50 content mt-4">
+                                <h4 class="h4 text-center rajdhani-bold">
+                                    Leilane Almeida
+                                </h4>
+                                <p class="comment open-sans-300">
+                                    Recomendo tanto o serviço, ótimo atendimento, equipe atenciosa e educada,
+                                    profissionais qualificados e preocupados em resolver o seu problema e não só em
+                                    vender serviços, quanto a localidade e o próprio ambiente.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex flex-column align-items-center">
+                            <div class="p-2 card-img">
+                                <img src="https://lh3.googleusercontent.com/a-/ALV-UjXIdfwGK5f8yNNoM72pPA9AEKN-nFgIM7w9B8RGzc7D_Mwq_XkK=w250-h250-p-rp-mo-br100"
+                                    class="d-block w-100" alt="anderson">
+                                <i class="fa-solid fa-comment"></i>
+                            </div>
+                            <div class="w-50 content mt-4">
+                                <h4 class="h4 text-center rajdhani-bold">
+                                    Anderson Fortes
+                                </h4>
+                                <p class="comment open-sans-300">
+                                    Um lugar de assistência automotivo que Avaré realmente precisava, lugar realmente
+                                    dez que faz a diferença pro cliente, obrigado pelo serviço excelência!!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex flex-column align-items-center">
+                            <div class="p-2 card-img">
+                                <img src="https://lh3.googleusercontent.com/a-/ALV-UjWRb5v0z7L9FGMeAXD3fJ55nFuFvl7gRY6Vpki5bljaRVjwXmfQ=w250-h250-p-rp-mo-br100"
                                     class="d-block w-100" alt="...">
-                                <i class="fa-solid fa-comment"></i> -->
-                            </div>
-                            <div class="w-50 content mt-4">
-                                <h4 class="h4 text-center rajdhani-bold">
-                                    Guilherme Miranda
-                                </h4>
-                                <p class="comment open-sans-300">
-                                    Ótima oficina e ótimos profissionais!! Souberam explicar e consertar o problema do
-                                    meu carro com transparência e excelência, super recomendo.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="d-flex flex-column align-items-center">
-                            <div class="p-2 card-img">
-                                <!-- <img src="https://media-gru2-2.cdn.whatsapp.net/v/t61.24694-24/409757073_358130286965611_5018120938827817335_n.jpg?ccb=11-4&amp;oh=01_Q5AaIM_8X0BAvUZoZwnUtv3DqwyQY2FiKPc98rFWLfVi2nTf&amp;oe=6640AB0E&amp;_nc_sid=e6ed6c&amp;_nc_cat=105"
-                                    class="d-block w-100" alt="..."> -->
                                 <i class="fa-solid fa-comment"></i>
                             </div>
                             <div class="w-50 content mt-4">
                                 <h4 class="h4 text-center rajdhani-bold">
-                                    Guilherme Miranda
+                                    Marta Rodrigues
                                 </h4>
                                 <p class="comment open-sans-300">
-                                    Ótima oficina e ótimos profissionais!! Souberam explicar e consertar o problema do
-                                    meu carro com transparência e excelência, super recomendo.
+                                    Ótima oficina o serviço de altíssima qualidade.
+                                    Atendimento de primeira.
+                                    Obrigada pela atenção 👏 …
                                 </p>
                             </div>
                         </div>
@@ -436,7 +498,7 @@
                 </div>
             </div>
         </section>
-        <a class="btn-whats shadow-lg" href="https://wa.me/5514998464904?text=Tenho" target="_blank"
+        <a class="btn-whats shadow-lg" href="https://wa.me/5514998464904?text=Olá! Estou entrando em contato pelo site e gostaria de agendar um serviço. Podemos conversar mais sobre isso? Aguardo sua resposta. Obrigado!" target="_blank"
             rel="noopener noreferrer">
             <i class="fa-brands fa-whatsapp fa-xl"></i>
         </a>
