--- a/index.html
+++ b/index.html
@@ -114,12 +114,6 @@
             </div>
             <div class="item" style="background-image: url(/assets/images/banner3/banner5.jpg);">
             </div>
-            <!-- <div class="item"> 
-                <img src="/assets/images/banner2/banner2.jpeg" alt="aa">
-            </div>
-            <div class="item">
-                <img src="assets/images/banner2/banner3.jpeg" alt="aa">
-            </div> -->
         </section>
         <section class="about-us" id="about">
             <div class="d-flex flex-column about-move align-items-center gap-4 " style="opacity: 1;">
@@ -154,7 +148,7 @@
                 <div class="card-service shadow-lg rounded card-representation">
 
                     <div class="card-service-img ">
-                        <img src="./assets/images/breakRepair.jpg">
+                        <img src="./assets/images/breakRepair.jpg" alt="freios">
                     </div>
                     <div class="card-service-detail">
                         <p class="title">
@@ -170,7 +164,7 @@
                 <div class="card-service shadow-lg rounded card-oleo">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/oil.jpg">
+                        <img src="./assets/images/oil.jpg" alt="oleo">
                     </div>
                     <div class="card-service-detail">
                         <p class="title">
@@ -185,7 +179,7 @@
                 </div>
                 <div class="card-service shadow-lg rounded card-aliment">
                     <div class="card-service-img">
-                        <img src="./assets/images/suspension.jpg">
+                        <img src="./assets/images/suspension.jpg" alt="suspensão">
                     </div>
                     <div class="card-service-detail">
                         <p class="title">
@@ -201,7 +195,7 @@
                 <div class="card-service shadow-lg rounded card-pneu">
 
                     <div class="card-service-img">
-                        <img src="./assets/images/pneu.jpg">
+                        <img src="./assets/images/pneu.jpg" alt="pneu">
 
                     </div>
                     <div class="card-service-detail">
@@ -238,7 +232,7 @@
                 </button> -->
             </div>
             <div class="p-0">
-                <img src="./assets/images/bestService.jpg">
+                <img src="./assets/images/bestService.jpg" alt="visao">
                 <div class="result-guarantee-blur"></div>
             </div>
 
@@ -283,7 +277,7 @@
         </section>
         <section class="best-services" id="values">
             <div class="p-0 best-service-image">
-                <img src="./assets/images/result.jpg">
+                <img src="./assets/images/result.jpg" alt="valores">
                 <div class="best-services-blur"></div>
             </div>
             <div class="best-services-body">
@@ -427,7 +421,7 @@
                         <div class="d-flex flex-column align-items-center">
                             <div class="p-2 card-img">
                                 <img src="https://lh3.googleusercontent.com/a-/ALV-UjWRb5v0z7L9FGMeAXD3fJ55nFuFvl7gRY6Vpki5bljaRVjwXmfQ=w250-h250-p-rp-mo-br100"
-                                    class="d-block w-100" alt="...">
+                                    class="d-block w-100" alt="Marta">
                                 <i class="fa-solid fa-comment"></i>
                             </div>
                             <div class="w-50 content mt-4">
@@ -498,13 +492,14 @@
                 </div>
             </div>
         </section>
-        <a class="btn-whats shadow-lg" href="https://wa.me/5514998464904?text=Olá! Estou entrando em contato pelo site e gostaria de agendar um serviço. Podemos conversar mais sobre isso? Aguardo sua resposta. Obrigado!" target="_blank"
-            rel="noopener noreferrer">
+        <a class="btn-whats shadow-lg"
+            href="https://wa.me/5514998464904?text=Olá! Estou entrando em contato pelo site e gostaria de agendar um serviço. Podemos conversar mais sobre isso? Aguardo sua resposta. Obrigado!"
+            target="_blank" rel="noopener noreferrer">
             <i class="fa-brands fa-whatsapp fa-xl"></i>
         </a>
     </main>
-    <footer>
-        footer
+    <footer class="footer p-2 text-center">
+        &copy Carv Auto Center
     </footer>
     <script src="assets/jQuery/js/jQuery.min.js"></script>
     <script src="assets/OwlCarousel/dist/owl.carousel.min.js"></script>
