--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+  name="description"
+  content="Na Carv Auto Center você vai encontrar soluções confiáveis para suas necessidades automotivas em nossa oficina mecânica. Oferecemos serviços profissionais de reparo e manutenção para garantir que seu veículo funcione sem problemas. Conte com nossa experiência e dedicação para mantê-lo seguro na estrada. Agende sua visita hoje mesmo!">
+
     <title>Carv Auto Center</title>
 
     <!-- Start Font -->
