--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta
-  name="description"
-  content="Na Carv Auto Center você vai encontrar soluções confiáveis para suas necessidades automotivas em nossa oficina mecânica. Oferecemos serviços profissionais de reparo e manutenção para garantir que seu veículo funcione sem problemas. Conte com nossa experiência e dedicação para mantê-lo seguro na estrada. Agende sua visita hoje mesmo!">
+    <meta name="description"
+        content="Na Carv Auto Center você vai encontrar soluções confiáveis para suas necessidades automotivas em nossa oficina mecânica. Oferecemos serviços profissionais de reparo e manutenção para garantir que seu veículo funcione sem problemas. Conte com nossa experiência e dedicação para mantê-lo seguro na estrada. Agende sua visita hoje mesmo!">
 
     <title>Carv Auto Center</title>
 
@@ -58,15 +57,15 @@
                 </p>
             </a>
             <div class="d-flex align-items-center gap-2 px-3">
-                <a href="tel:+5514998464904" class="icon-link text-decoration-none">
+                <a href="tel:+5514998464904" aria-label="Entre em contato" class="icon-link text-decoration-none m-1">
                     <i class="fa-solid fa-phone primary-color"></i>
 
                 </a>
                 <a href="https://www.facebook.com/carv.autocenter?mibextid=ZbWKwL"
-                    class="icon-link text-decoration-none" target="_blank">
+                    class="icon-link text-decoration-none m-1" aria-label="Nosso facebook" target="_blank">
                     <i class="fa-brands fa-facebook primary-color"></i>
                 </a>
-                <a class="icon-link text-decoration-none"
+                <a class="icon-link text-decoration-none m-1" aria-label="Nosso instagram"
                     href="https://www.instagram.com/carv.autocenter?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                     target="_blank">
                     <i class="fa-brands fa-instagram primary-color"></i>
@@ -498,7 +497,7 @@
         </section>
         <a class="btn-whats shadow-lg"
             href="https://wa.me/5514998464904?text=Olá! Estou entrando em contato pelo site e gostaria de agendar um serviço. Podemos conversar mais sobre isso? Aguardo sua resposta. Obrigado!"
-            target="_blank" rel="noopener noreferrer">
+            target="_blank" aria-label="Nosso facebook"s rel="noopener noreferrer">
             <i class="fa-brands fa-whatsapp fa-xl"></i>
         </a>
     </main>
