--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
         </section>
         <a class="btn-whats shadow-lg"
             href="https://wa.me/5514998464904?text=Olá! Estou entrando em contato pelo site e gostaria de agendar um serviço. Podemos conversar mais sobre isso? Aguardo sua resposta. Obrigado!"
-            target="_blank" aria-label="Nosso facebook"s rel="noopener noreferrer">
+            target="_blank" aria-label="Nosso whatsapp"s rel="noopener noreferrer">
             <i class="fa-brands fa-whatsapp fa-xl"></i>
         </a>
     </main>
